Micro-todo-ui/manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-ui-app
  selector:
    app: todo-ui-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
