Micro-todo-ui/manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ui-app-ingress
  labels:
    app.kubernetes.io/name: todo-ui-app-ingress
spec:
  rules:
  - host: puneetdevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-ui-app
            port: 
              number: 80
